--- a/ContactUs.html
+++ b/ContactUs.html
@@ -114,8 +114,12 @@
 
 </section>
 
+<a href="https://wa.me/27605685581" target="_blank" class="whatsapp-float" aria-label="Chat on WhatsApp">
+    <img src="greenwhatsapp.png" alt="WhatsApp" class="whatsapp-icon">
+  </a>
+
 <footer class="site-footer">
-  <p>© 2025 Black Phoenix Funeral Home.</p>
+  <p>© 2025 Black Phoenix Funeral Home. Build by InsyncTech</p>
 </footer>
 
 </body>
