--- a/OurPolicies.html
+++ b/OurPolicies.html
@@ -41,6 +41,7 @@
     <li>24-hour WhatsApp support</li>
   </ul>
 
+  <a href="https://online-joinings.ingwe-systems.com/?companyCode=2dd0b94a0cf61d0fa43d8db53916f6c0&shortLinkCode=2dd0" target="_blank">
   <div class="policy-grid">
     <div class="policy-card">
       <h3>Silver Policy</h3>
@@ -48,25 +49,34 @@
       <p>Monthly: R150</p>
       <strong>Payout: R20 000</strong>
     </div>
+    </a>
 
+    <a href="https://online-joinings.ingwe-systems.com/?companyCode=2dd0b94a0cf61d0fa43d8db53916f6c0&shortLinkCode=2dd0" target="_blank">
     <div class="policy-card">
       <h3>Gold Policy</h3>
       <p>Joining Fee: R250</p>
       <p>Monthly: R200</p>
       <strong>Payout: R20 000</strong>
     </div>
+    </a>
 
+    <a href="https://online-joinings.ingwe-systems.com/?companyCode=2dd0b94a0cf61d0fa43d8db53916f6c0&shortLinkCode=2dd0" target="_blank">
     <div class="policy-card">
       <h3>Black Policy</h3>
       <p>Joining Fee: R250</p>
       <p>Monthly: R250</p>
       <strong>Payout: R30 000</strong>
     </div>
+    </a>
   </div>
 </section>
 
+<a href="https://wa.me/27605685581" target="_blank" class="whatsapp-float" aria-label="Chat on WhatsApp">
+    <img src="greenwhatsapp.png" alt="WhatsApp" class="whatsapp-icon">
+  </a>
+
 <footer class="site-footer">
-  <p>© 2025 Black Phoenix Funeral Home.</p>
+  <p>© 2025 Black Phoenix Funeral Home.Build by InsyncTech</p>
 </footer>
 
 </body>
