--- a/index.html
+++ b/index.html
@@ -70,8 +70,11 @@
   <img src="logoRevised.png" class="slide" alt="Slide 3">
 </div>
 
+<a href="https://wa.me/27605685581" target="_blank" class="whatsapp-float" aria-label="Chat on WhatsApp">
+    <img src="greenwhatsapp.png" alt="WhatsApp" class="whatsapp-icon">
+  </a>
 <footer class="site-footer">
-  <p>© 2025 Black Phoenix Funeral Home. All rights reserved.</p>
+  <p>© 2025 Black Phoenix Funeral Home. All rights reserved.Build by InsyncTech</p>
 </footer>
 
 </body>
