--- a/ContactUs.html
+++ b/ContactUs.html
@@ -33,34 +33,6 @@
 <section class="content container">
   <h2>Contact Us</h2>
 
-  <div class="contact-card">
-    <h3>George Dlodlo</h3>
-    <p>&#9743;
-    <a href="tel:083 734 3607">083 734 3607</a>
-    </p>
-    <br>
-    <p>&#9993;
-    <a href="mailto:George@bpfunerals.co.za">George@bpfunerals.co.za</a>
-    </p>
-  </div>
-
-  <div class="contact-card">
-    <h3>Patience Moyo</h3>
-    <p>&#9743;
-    <a href="tel:073 925 4043">073 925 4043</a>
-    </p>
-    <br>
-    <p>&#9993;
-    <a href="mailto:Patie@bpfunerals.co.za">Patie@bpfunerals.co.za</a>
-    </p>
-  </div>
-
-  <div class="contact-card">
-    <h3>Policy Administration (24 Hours)</h3>
-    <a href="https://wa.me/060 568 5581" target="_blank">Chat with us</a>
-    <p>24 hour online support on whatsapp</p>
-  </div>
-
 
   <div class="contact-layout">
 
@@ -84,7 +56,7 @@
   </div>
 
   <!-- CONTACT FORM -->
-  <<form class="contact-form" onsubmit="sendWhatsAppMessage(event)">
+  <form class="contact-form" onsubmit="sendWhatsAppMessage(event)">
     <h3>Send Us a Message</h3>
 
     <div class="form-group">
