--- a/ContactUs.html
+++ b/ContactUs.html
@@ -5,6 +5,8 @@
   <title>Contact Us | Black Phoenix</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="icon" href="logo.png" type="image/x-icon">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 </head>
 <body>
 
@@ -32,6 +34,9 @@
 
 <section class="content container">
   <h2>Contact Us</h2>
+  <p>Black Phoenix Funeral Home is available 24 hours a day, ensuring that support is always within reach when you need it most. You can contact us via direct call, WhatsApp, or our social media platforms at any time.</p>
+
+  <h3>Primary Contacts:</h3>
 
 
   <div class="contact-layout">
@@ -93,6 +98,16 @@
 <footer class="site-footer">
   <p>© 2025 Black Phoenix Funeral Home. Build by InsyncTech</p>
 </footer>
+
+<script>
+  const toggle = document.querySelector('.menu-toggle');
+  const navLinks = document.querySelector('.nav-links');
+
+  toggle.addEventListener('click', () => {
+    navLinks.classList.toggle('active');
+  });
+</script>
+
 
 </body>
 </html>
