--- a/Foundations.html
+++ b/Foundations.html
@@ -5,6 +5,8 @@
   <title>Foundation | Black Phoenix</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="icon" href="logo.png" type="image/x-icon">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 </head>
 <body>
 
@@ -31,22 +33,47 @@
 </header>
 
 <section class="content container">
-  <h2>Siyamthanda Hope Foundation</h2>
+  <h2>Foundations</h2>
 
   <p>
-    We are proud partners of the Siyamthanda Hope Foundation, supporting families
-    with children who are terminally ill due to cancer.
+    At Black Phoenix Funeral Home, we believe that no business can survive as an island. Guided by our core ethos of Empathy, Care, and Dignity, giving back to the community is an integral part of who we are and how we operate.
   </p>
 
-  <p>
-    In loving memory of Siyamthanda Bonolo Khumalo (7), this foundation provides
-    free funeral and advisory services to affected families.
+  <h2>Our Partnership</h2>
+
+  <p><em>
+    We are proud partners of the Siyamthanda Hope Foundation, an organisation dedicated to providing support services to families with children who are terminally ill due to cancer. The foundation focuses on offering comfort, guidance, and practical support during one of the most painful journeys a family can face.</em>
   </p>
 
+  <h2>Our Commitment</h2>
+
   <p>
-    Learn more or donate at:
-    <a href="https://www.shrp.co.za" target="_blank">www.shrp.co.za</a>
+    Through this partnership, Black Phoenix Funeral Home provides free funeral services, including ancillary funeral and advisory services, to affected families. Our aim is to relieve financial and emotional pressure during times of profound loss, while ensuring that every child is laid to rest with dignity and respect.
   </p>
+
+  <h2>In Loving Memory</h2>
+
+   <p><em>
+    This foundation is deeply personal to us. We have experienced the pain of losing a child to cancer—<b>Siyamthanda Bonolo Khumalo</b>, who was just 7 years old. Her journey and legacy inspired the creation of the Siyamthanda Hope Foundation.</em>
+    <br><br>
+
+     <div class="siya">
+         <img src="SiyamthandaKid1.jpg" class="slide" alt="Slide 3">
+    </div>
+
+    Although the foundation is still in its early stages, the continued dedication of Black Phoenix Funeral Home and the family of the deceased gives us confidence that we will touch and support many more children and families in their time of need.
+    <br><br>
+    At every stage, we emphasise dignity, compassion, and humanity—regardless of the journey.
+  </p>
+
+  <br><br>
+
+  <h2>Get Involved</h2>
+  <p>To learn more about the Siyamthanda Hope Foundation or to make a donation, please visit:
+      <a href="www.shrp.co.za" target="_blank">www.shrp.co.za</a>
+  </p>
+  
+
 </section>
 
 <div class="slideshow-card">
@@ -62,6 +89,16 @@
 <footer class="site-footer">
   <p>© 2025 Black Phoenix Funeral Home.Build by InsyncTech</p>
 </footer>
+
+<script>
+  const toggle = document.querySelector('.menu-toggle');
+  const navLinks = document.querySelector('.nav-links');
+
+  toggle.addEventListener('click', () => {
+    navLinks.classList.toggle('active');
+  });
+</script>
+
 
 </body>
 </html>
