--- a/OurPartners.html
+++ b/OurPartners.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <title>Our Partners | Black Phoenix</title>
   <link rel="stylesheet" href="styles.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <link rel="icon" href="logo.png" type="image/x-icon">
 </head>
 <body>
@@ -33,6 +35,8 @@
 <section class="content container">
   <h2>Our Partners</h2>
 
+  <p>At Black Phoenix Funerals, we believe that exceptional service is built on strong, reliable partnerships. Over the years, we have established strategic alliances with trusted service providers across South Africa and Southern Africa, ensuring that our standards of care, efficiency, and dignity are upheld—no matter where our clients are in the world.</p>
+
   <h3>Regional & International Partners</h3>
   <ul class="list">
     <li>Africa One – Harare (Zimbabwe)</li>
@@ -42,11 +46,15 @@
 
   <h3>Insurance Partnerships</h3>
   <p>
-    Our funeral policies are underwritten by Ingwe Life in partnership with
-    African Unity Insurance, ensuring reliable claims and financial stability.
+    Our strategic alliance with Ingwe Life, our underwriting insurance partner, ensures continuity, operational efficiency, and financial reliability. This partnership allows us to provide accessible funeral policies while maintaining the highest standards of service delivery and regulatory compliance.
   </p>
 
   <h3>Government & Institutional Stakeholders</h3>
+
+  <p>
+    Black Phoenix Funerals works closely with key government and institutional stakeholders, giving us a deep understanding of regulatory processes and interdepartmental coordination. Our established working relationships include:
+  </p>
+
   <ul class="list">
     <li>Department of Home Affairs</li>
     <li>Department of Health</li>
@@ -54,6 +62,10 @@
     <li>Cemeteries and Parks Authorities</li>
     <li>Interpol</li>
   </ul>
+
+  <br>
+
+  <p><em><b>These alliances position Black Phoenix Funerals as a preferred and trusted service provider, enabling us to navigate complex procedures efficiently and deliver a smooth, respectful, and seamless experience for our clients during their times of need.</em></b></p>
 </section>
 
 <a href="https://wa.me/27605685581" target="_blank" class="whatsapp-float" aria-label="Chat on WhatsApp">
@@ -63,6 +75,16 @@
 <footer class="site-footer">
   <p>© 2025 Black Phoenix Funeral Home.Build by InsyncTech</p>
 </footer>
+
+<script>
+  const toggle = document.querySelector('.menu-toggle');
+  const navLinks = document.querySelector('.nav-links');
+
+  toggle.addEventListener('click', () => {
+    navLinks.classList.toggle('active');
+  });
+</script>
+
 
 </body>
 </html>
