--- a/OurPolicies.html
+++ b/OurPolicies.html
@@ -5,6 +5,8 @@
   <title>Policies | Black Phoenix</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="icon" href="logo.png" type="image/x-icon">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 </head>
 <body>
 
@@ -33,13 +35,45 @@
 <section class="content container">
   <h2>Funeral Policies</h2>
 
+  <p>
+    At Black Phoenix Funeral Home, our funeral policies are designed to give you peace of mind, financial security, and dignity when it matters most. Our insured policies are underwritten by Ingwe Life (FSP No. 46001) and supported by African Unity Insurance, a respected insurance giant—ensuring stable premiums and reliable, timely claim payouts.
+    <br><br>
+    <em><b>
+    Why Choose Our Funeral Policies?
+    </b></em>
+  </p>
+
   <ul class="list">
-    <li>48-hour claims payout (T&Cs apply)</li>
-    <li>Low claims rejection ratio</li>
-    <li>Cash payout and international services options</li>
-    <li>National payment network and debit orders</li>
-    <li>24-hour WhatsApp support</li>
+    <li>Affordable, insured funeral cover backed by African Unity Insurance</li>
+    <li>Stable premiums with dependable and timeous claim settlements</li>
+    <li>48-hour claims payout (subject to policy terms and conditions)</li>
+    <li>Low claims rejection ratio, giving you confidence when claiming</li>
+    <li>Simple and transparent claims process</li>
   </ul>
+
+  <br><br>
+  <h2>Convenient & Accessible</h2>
+
+  <ul class="list">
+    <li>National payment network available at major retailers including
+        SPAR, Game, Woolworths, and Checkers—accessible anywhere in South Africa</li>
+    <li>Easy debit order facility for hassle-free monthly payments</li>
+    <li>Electronic notifications for payments, claims, and missed premiums</li>
+    <li>24-hour WhatsApp support for assistance whenever you need it</li>
+    <li>Online joining available—no need to visit our offices</li>
+  </ul>
+
+  <br><br>
+  <h2>Flexible Benefits</h2>
+
+  <ul class="list">
+    <li>Cash payout option available</li>
+    <li>International services option for repatriation and cross-border needs</li>
+    <li>Cover for extended family members, including those not residing in South Africa</li>
+    <li>Funds may be used for travel to attend funerals</li>
+  </ul>
+
+  <h3>We offer three tailored policy options to suit your needs and budget:</h3>
 
   <a href="https://online-joinings.ingwe-systems.com/?companyCode=2dd0b94a0cf61d0fa43d8db53916f6c0&shortLinkCode=2dd0" target="_blank">
   <div class="policy-grid">
@@ -69,6 +103,8 @@
     </div>
     </a>
   </div>
+
+  <h3>Each option is designed to provide dignified cover with flexibility.</h3>
 </section>
 
 <a href="https://wa.me/27605685581" target="_blank" class="whatsapp-float" aria-label="Chat on WhatsApp">
@@ -78,6 +114,16 @@
 <footer class="site-footer">
   <p>© 2025 Black Phoenix Funeral Home.Build by InsyncTech</p>
 </footer>
+
+<script>
+  const toggle = document.querySelector('.menu-toggle');
+  const navLinks = document.querySelector('.nav-links');
+
+  toggle.addEventListener('click', () => {
+    navLinks.classList.toggle('active');
+  });
+</script>
+
 
 </body>
 </html>
