--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <title>Black Phoenix Funeral Home | About Us</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="icon" href="logo.png" type="image/x-icon">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <script defer src="script.js"></script>
 </head>
 <body>
@@ -34,41 +36,40 @@
 <section class="hero">
   <div class="container">
     <h2>Empathy • Care • Dignity</h2>
-    <p>Walking alongside families with compassion since 2015.</p>
   </div>
 </section>
 
 <section class="content container">
   <h2>About Us</h2>
   <p>
-    Black Phoenix Funeral Home was formed in 2015 with a clear and compassionate
-    purpose: to serve families with empathy, care, and dignity during life’s most
-    difficult moments.
+    Black Phoenix Funeral Home was formed in 2015 with a <b>clear and compassionate purpose: to serve families with empathy, care, and dignity during life’s most difficult moments.</b>
+    <br><br>
+
+Owner-managed and values-driven, Black Phoenix Funeral Home is guided by the ethos of Empathy • Care • Dignity. Our owner is deeply passionate about service delivery and continually improving the quality, professionalism, and respect with which every farewell is conducted. We believe that every life deserves a dignified send-off, regardless of circumstance.
   </p>
 
   <p>
-    Owner-managed and values-driven, we believe every life deserves a dignified
-    send-off, regardless of circumstance. We offer affordable funeral policies
-    underwritten by Ingwe Life and operate as a registered Financial Services Provider.
+    We understand the emotional and financial pressures that accompany the loss of a loved one. To ease this burden, we offer affordable funeral policies designed to provide peace of mind through manageable monthly premiums. Our funeral policies are underwritten by Ingwe Life, and Black Phoenix Funeral Home is a registered Financial Services Provider, ensuring compliance, transparency, and trust.
+  </p>
+
+  <div class="slideshow-card">
+  <img src="logoRevised.png" class="slide active" alt="Slide 1">
+  <img src="SiyamthandaChildren.png" class="slide" alt="Slide 2">
+  <img src="SiyamthandaKid1.jpg" class="slide" alt="Slide 3">
+</div>
+
+  <p>
+    Black Phoenix Funeral Home is also a specialist repatriation service provider, with established international partnerships across Southern Africa and a growing network extending into the United Kingdom, Ireland, Canada, and the United States of America. <b>We handle cross-border repatriations with professionalism, cultural sensitivity, and efficiency, ensuring loved ones are returned home with dignity and care.</b>
   </p>
 
   <p>
-    We are specialist repatriation service providers with partnerships across
-    Southern Africa, the United Kingdom, Ireland, Canada, and the United States,
-    ensuring loved ones are returned home with dignity.
-  </p>
+    We are proud members of <b>IFDA SA (Inner City Funeral Directors Association of South Africa)</b>—a respected funeral association committed to protecting the interests of families and ensuring that funeral service providers deliver on their promises with integrity and accountability.
 
-  <p>
-    Proud members of IFDA SA, we are committed to integrity, accountability, and
-    professional excellence.
+At Black Phoenix Funeral Home, we are more than a service provider. We are a trusted partner to families, committed to honouring life, preserving dignity, and walking alongside you with compassion every step of the way.
   </p>
 </section>
 
-<div class="slideshow-card">
-  <img src="logoRevised.png" class="slide active" alt="Slide 1">
-  <img src="SiyamthandaChildren.png" class="slide" alt="Slide 2">
-  <img src="logoRevised.png" class="slide" alt="Slide 3">
-</div>
+
 
 <a href="https://wa.me/27605685581" target="_blank" class="whatsapp-float" aria-label="Chat on WhatsApp">
     <img src="greenwhatsapp.png" alt="WhatsApp" class="whatsapp-icon">
@@ -76,6 +77,16 @@
 <footer class="site-footer">
   <p>© 2025 Black Phoenix Funeral Home. All rights reserved.Build by InsyncTech</p>
 </footer>
+
+<script>
+  const toggle = document.querySelector('.menu-toggle');
+  const navLinks = document.querySelector('.nav-links');
+
+  toggle.addEventListener('click', () => {
+    navLinks.classList.toggle('active');
+  });
+</script>
+
 
 </body>
 </html>
