--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
       ☰
     </button>
 
+    <button class="dark-toggle" aria-label="Toggle dark mode">
+  🌙
+</button>
+
+
     <nav class="nav-links">
       <a href="index.html">About</a>
       <a href="OurPartners.html">Partners</a>
@@ -86,6 +91,51 @@ At Black Phoenix Funeral Home, we are more than a service provider. We are a tru
     navLinks.classList.toggle('active');
   });
 </script>
+
+<script>
+  const darkToggle = document.querySelector('.dark-toggle');
+  const body = document.body;
+
+  // Apply saved preference or system preference on load
+  const savedTheme = localStorage.getItem('theme');
+
+  if (savedTheme === 'dark') {
+    body.classList.add('dark');
+    darkToggle.textContent = '☀️';
+  } else if (!savedTheme) {
+    if (window.matchMedia('(prefers-color-scheme: dark)').matches) {
+      body.classList.add('dark');
+      darkToggle.textContent = '☀️';
+    }
+  }
+
+  // Toggle dark mode
+  darkToggle.addEventListener('click', () => {
+    body.classList.toggle('dark');
+
+    const isDark = body.classList.contains('dark');
+    darkToggle.textContent = isDark ? '☀️' : '🌙';
+    localStorage.setItem('theme', isDark ? 'dark' : 'light');
+  });
+
+
+  const slideshows = document.querySelectorAll('.slideshow-card');
+
+slideshows.forEach(slideshow => {
+  const slides = slideshow.querySelectorAll('.slide');
+  let index = 0;
+
+  setInterval(() => {
+    slides[index].classList.remove('active');
+    index = (index + 1) % slides.length;
+    slides[index].classList.add('active');
+  }, 5000);
+});
+
+</script>
+
+
+
 
 
 </body>
