--- a/ContactUs.html
+++ b/ContactUs.html
@@ -46,24 +46,32 @@
 
   <div class="contact-layout">
 
-  <!-- Existing contact cards -->
-  <div class="contact-card">
-    <h3>George Dlodlo</h3>
-    <p>&#9743; <a href="tel:0837343607">083 734 3607</a></p>
-    <p>&#9993; <a href="mailto:George@bpfunerals.co.za">George@bpfunerals.co.za</a></p>
-  </div>
+<!-- Existing contact cards with images added -->
 
-  <div class="contact-card">
-    <h3>Patience Moyo</h3>
-    <p>&#9743; <a href="tel:0739254043">073 925 4043</a></p>
-    <p>&#9993; <a href="mailto:Patie@bpfunerals.co.za">Patie@bpfunerals.co.za</a></p>
-  </div>
+<div class="contact-card">
+  <img src="GeorgeDlodlo2.jpg" alt="George Dlodlo" class="contact-image">
 
-  <div class="contact-card">
-    <h3>Policy Administration (24 Hours)</h3>
-    <a href="https://wa.me/27605685581" target="_blank">Chat with us</a>
-    <p>24 hour online support on WhatsApp</p>
-  </div>
+  <h3>George Dlodlo</h3>
+  <p>&#9743; <a href="tel:0837343607">083 734 3607</a></p>
+  <p>&#9993; <a href="mailto:George@bpfunerals.co.za">George@bpfunerals.co.za</a></p>
+</div>
+
+<div class="contact-card">
+  <img src="" alt="Patience Moyo" class="contact-image">
+
+  <h3>Patience Moyo</h3>
+  <p>&#9743; <a href="tel:0739254043">073 925 4043</a></p>
+  <p>&#9993; <a href="mailto:Patie@bpfunerals.co.za">Patie@bpfunerals.co.za</a></p>
+</div>
+
+<div class="contact-card">
+  <img src="whatsapp Icon.jpg" alt="24 Hour WhatsApp Support" class="contact-image">
+
+  <h3>Policy Administration (24 Hours)</h3>
+  <a href="https://wa.me/27605685581" target="_blank">Chat with us</a>
+  <p>24 hour online support on WhatsApp</p>
+</div>
+
 
   <!-- CONTACT FORM -->
   <form class="contact-form" onsubmit="sendWhatsAppMessage(event)">
