--- a/ContactUs.html
+++ b/ContactUs.html
@@ -57,7 +57,7 @@
 </div>
 
 <div class="contact-card">
-  <img src="" alt="Patience Moyo" class="contact-image">
+  <img src="patience.jpeg" alt="Patience Moyo" class="contact-image">
 
   <h3>Patience Moyo</h3>
   <p>&#9743; <a href="tel:0739254043">073 925 4043</a></p>
