--- a/Foundations.html
+++ b/Foundations.html
@@ -82,9 +82,9 @@
 </section>
 
 <div class="slideshow-card">
-  <img src="SiyamthandaLogo.jpeg" class="slide active" alt="Slide 1">
+  <img src="Screenshot 2025-12-29 102625.png" class="slide active" alt="Slide 1">
   <img src="SiyamthandaChildren.png" class="slide" alt="Slide 2">
-  <img src="SiyamthandaLogo.jpeg" class="slide" alt="Slide 3">
+  <img src="siyaResized.jpg" class="slide" alt="Slide 3">
 </div>
 
 <a href="https://wa.me/27605685581" target="_blank" class="whatsapp-float" aria-label="Chat on WhatsApp">
