--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@ Owner-managed and values-driven, Black Phoenix Funeral Home is guided by the eth
   </p>
 
   <div class="slideshow-card">
-  <img src="logoRevised.png" class="slide active" alt="Slide 1">
+  <img src="logoA1.png" class="slide active" alt="Slide 1">
   <img src="SiyamthandaChildren.png" class="slide" alt="Slide 2">
-  <img src="SiyamthandaKid1.jpg" class="slide" alt="Slide 3">
+  <img src="Screenshot 2025-12-29 102625.png" class="slide" alt="Slide 3">
 </div>
 
   <p>
